feat(java/10): restructure jvm-internals to golden standard
- Root level: README.md, decision.md, references.md, quiz.md, .gitignore
- All 12 sub-folders restructured with: 00-internals, 01-memory, examples, practices, solutions
- Added root-level examples/ (13 Java files), practices/ (10 files), solutions/ (10 files)
- Removed src/ tree, stray .java files, exercises/ folder
- Content covers: ClassLoader, Memory Model, GC, GC Algorithms, JIT, Profiling, Diagnostics, Tuning, Security, Module System